# HeadHunter

./: README.md  conftest.py  pyproject.toml
data/: vacancies.json
src/: api.py  config.py  main.py  utils.py  vacancies.py  working_with_file.py
src/api/: api_base.py  api_hh.py
src/data/: vacancies.json
src/working_with_file/: vacancies.json  working_with_file_base.py  working_with_file_hh.py
tests/: test_api_hh.py  test_vacancies.py  test_working_with_file.py
